2013-03-09
* extract values of EXPORT_SYMBOL* from Linux kernel source and store them.
These can later be used by ranking.py if there is a kernel image packed as an
ELF executable.
* start on extra sanity checks for batchextractprogramstrings.py to better
deal with duplicate versions which might or might not actually be duplicates.

2013-03-06
* check whether or not input for generating version charts is an empty list.
* update dedexer to 1.25 to have better support for ODEX

2013-03-05
* determine whether or not a ZIP file has a comment field.
* fixes for pretty printer: ingore unpackreports that have been removed, like
class files in the Java aggregator
* fix return type for findlibs.py
* crude fix for ZIP comment fields. Needs proper fix later, but hey, seems to
work so far
* ignore synthetic methods in Java class files

2013-03-04
* assign results of aggregate scans (if any) to the top level element.
* merge remaining part of generateuniquehtml.py into generatereports.py,
remove generateuniquehtml.py
* add support for pack200, not enabled by default, since I first need to
figure out how to easily add a dependency on openjdk without version names.

2013-03-03
* deduplicate data for unique matches stored in results for JAR files. In some
cases this is a HUGE save (96% in size in some of my test cases).
* deduplicate data for unmatched strings stored in results for JAR files.
* generate unique string matches html report files in aggregate scan after
deduplication

2013-03-02
* extract pickles for generating images in parallel
* add storedir and other configuration directives to aggregate scans
* remove rankimages.py from configuration
* create workaround for weird ZIP files
* add aggregate scan for finding duplicate files. Reporting still needs to be
added.
* add more license markers

2013-03-01
* check whether or not file to be scanned actually exists
* add tags for gzip compressed files
* generate piecharts in parallel
* start on extracting pickles in parallel